--- a/FrontEnd/src/containers/HomPage/HomePage.scss
+++ b/FrontEnd/src/containers/HomPage/HomePage.scss
@@ -72,7 +72,7 @@
                     background-image: url("../../assets/medical-facility/benh-vien-thu-cuc.jpg");
                 }
                 &.section-outstanding-doctor {
-                    background-image: url("../../assets/outstanding-doctor/doctor1.jpg");
+                    // background-image: url("../../assets/outstanding-doctor/doctor1.jpg");
                     width: 120px;
                     height: 120px;
                     border-radius: 50%;
