--- a/FrontEnd/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/FrontEnd/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -1,14 +1,12 @@
 .doctor-detail-container {
-    margin: 80px 100px 0;
+    margin-top: 80px;
     height: 500px;
-    border: 1px solid red;
     .intro-doctor {
         display: flex;
         min-height: 140px;
-        border: 1px solid green;
         .content-left {
             // width: 20%;
-            background:center center no-repeat;
+            background: center center no-repeat;
             width: 120px;
             height: 120px;
             border-radius: 50%;
@@ -29,5 +27,21 @@
                 padding-top: 10px;
             }
         }
+    }
+
+    .detail-info-doctor {
+        border-top: 1px solid #ddd;
+        padding: 10px 100px;
+        background-color: #f9f9f9;
+        h3 {
+            font-size: 17px;
+        }
+        img {
+            width: 100%;
+        }
+    }
+
+    .comment-doctor {
+        height: 100px;
     }
 }
