--- a/FrontEnd/src/containers/System/Admin/ManageDoctor.scss
+++ b/FrontEnd/src/containers/System/Admin/ManageDoctor.scss
@@ -20,6 +20,20 @@
         }
     }
 
+    .create-content-doctor-btn {
+        margin: 20px 0 30px 0;
+        border-radius: 3px;
+        outline: none;
+        border: none;
+        padding: 5px;
+        background-color: #0071ba;
+        color: white;
+        cursor: pointer;
+        &:hover {
+            opacity: 0.9;
+        }
+    }
+
     .more-infor {
         display: flex;
         flex-wrap: wrap;
