--- a/FrontEnd/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/FrontEnd/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -41,6 +41,19 @@
         }
     }
 
+    .scheduler-doctor {
+        margin: 0 100px;
+        display: flex;
+        height: 200px;
+        border: 1px solid red;
+        .content-left {
+            width: 50%;
+        }
+        .content-right {
+            width: 50%;
+        }
+    }
+
     .comment-doctor {
         height: 100px;
     }
