--- a/FrontEnd/src/containers/System/Admin/ManageDoctor.scss
+++ b/FrontEnd/src/containers/System/Admin/ManageDoctor.scss
@@ -12,7 +12,7 @@
         border-radius: 3px;
         outline: none;
         border: none;
-        padding: 5px;
+        padding: 8px 15px;
         background-color: orange;
         cursor: pointer;
         &:hover {
