--- a/FrontEnd/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/FrontEnd/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -4,7 +4,7 @@
         .content-left {
             // width: 20%;
             background: center center no-repeat;
-            background-size: contain;
+            background-size: cover;
             width: 80px;
             height: 80px;
             border-radius: 50%;
